<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tabellname"
        android:textAppearance="?android:attr/textAppearanceSmall" />
	<EditText android:id="@+id/etSQLName"
	    android:inputType="text"
		android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	</EditText>	   
    <TextView android:id="@+id/textView2" 
        android:text="@string/tabellcomment"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">        
    </TextView>
	<EditText android:id="@+id/etSQLComment"
	    android:inputType="text"
		android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	</EditText>	   
	<Button android:text="@string/buttonupdate"
	  	android:id="@+id/bSQLUpdate"	
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">        
	</Button>
	<Button android:text="@string/buttonview"
	  	android:id="@+id/bSQLopenView"	
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">        
	</Button>
	<TextView android:text="@string/enterrowid" android:id="@+id/textView3"
		android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	<EditText android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/etSQLrowInfo"
		android:inputType="number">
		<requestFocus></requestFocus>
	</EditText>
	<Button android:text="@string/getinfo" android:id="@+id/bgetInfo"
		android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
	<Button android:text="@string/editentry" android:id="@+id/bSQLmodify"
		android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
	<Button android:text="@string/deleteentry" android:id="@+id/bSQLdelete"
		android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
</LinearLayout>
